x/y/2014 ola-0.9.2
 Features:
 * Added --use-epoll which uses epoll() rather than select().
 * Added --use-kqueue which uses kqueue() rather than select().
 * Add some more additional slot definitions.
 * Allow the FTDI thread to switch from BAD to GOOD timing granularity.
 * (Partial) Windows support using MinGW. Build instructions are in
   README.mingw32.
   Parts that are already working:
   * building simple client applications
   * running olad
   * Plugins: Dummy, ArtNet, ShowNet, ESP Net, SandNet, Pathport, OSC, KiNet
   * Python bindings
   Parts that are not working yet:
   * all other plugins, especially device-based ones (USB, serial, SPI)
   * Java bindings
   Please test the port and report any issues you encounter on Github and/or the
   mailing list.

 Bugs:
 * Don't build ola_protoc if --with-ola-protoc= is provided.
 * Fix the inter-test delay in the RDM tests to work with values less than 1s.

 Internal:
 * Changed to a non-recursive build. Reduced build times by 5-25%.

21/6/2014 ola-0.9.1
 Features:
 * Pretty print IPV4 addresses within the Python RDM code.
 * Add some additional slot definitions and status messages.
 * Add a timestamp to model data filenames so they're unique.
 * Allow OSC ports to be looped.
 * Add the ability to reload plugins via RPC.
 * Added a plugin which uses the onboard UART.
 * Added a Python fade controller demo.

 API:
 * Change GetIdentifyMode to GetIdentifyDevice in the RDM API to clarify it's
   the IDENTIFY_DEVICE PID not the newer IDENTIFY_MODE one.

 RDM Tests:
 * Added the inter-test delay option to the Web UI.
 * Show transaction numbers in the responder tests to aid debugging
 * Don't warn about unknown slot definitions if they are manufacturer ones
 * Added a number of missing Get...WithData tests.

 Bugs:
 * Fix sensor numbering from 0 on web UI so it matches CLI
 * Fix the minimum and maximum level supported RDM tests
 * Stop the Python client throwing an AttributeError if the universe doesn't
   exist.