@@ -29,9 +29,9 @@ The port to listen for RPCs on. Defaults to 9010.
 Print
 .B olad
 version information
-.IP "--nohttp"
+.IP "--no-http"
 Disable the HTTP server.
-.IP "--nohttp-quit"
+.IP "--no-http-quit"
 Disable the HTTP /quit handler.
 .IP "--pid-location <string>"
 The directory containing the PID definitions
