@@ -4,6 +4,8 @@ x/y/2014 ola-0.9.2
  * Added --use-kqueue which uses kqueue() rather than select().
  * Add some more additional slot definitions.
  * Allow the FTDI thread to switch from BAD to GOOD timing granularity.
+ * Change the flags so the negated ones are --no-, this mostly affects --nohttp
+   and --nohttp-quit in olad
  * (Partial) Windows support using MinGW. Build instructions are in
    README.mingw32.
    Parts that are already working:
@@ -23,6 +25,7 @@ x/y/2014 ola-0.9.2
 
  Internal:
  * Changed to a non-recursive build. Reduced build times by 5-25%.
+ * Convert more of our programs to our flags module
 
 21/6/2014 ola-0.9.1
  Features:
